--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
 1. добавить определение локали пользователя
 2. добавить ярлыки для проектов с датой update
 3. добавить css модули
+4. вынести иконки отдельно
+5. добавить справйтирование иконок
