--- a/TODO.txt
+++ b/TODO.txt
@@ -4,3 +4,6 @@
 4. вынести иконки отдельно
 5. добавить справйтирование иконок
 6. вынести названия табов в константу
+7. убрать json
+8. добавить order для секции "Обо мне"
+9. добавить lazy загрузку картинок
