--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,12 @@
-1. добавить определение локали пользователя
-2. добавить ярлыки для проектов с датой update
-3. добавить css модули
-4. вынести иконки отдельно
-5. добавить справйтирование иконок
-6. вынести названия табов в константу
-7. убрать json
-8. добавить order для секции "Обо мне"
-9. добавить lazy загрузку картинок
+- добавить css модули
+- вынести названия табов в константу
+- убрать json
+- добавить order для секции "Обо мне"
+- добавить lazy загрузку картинок
+- убрать лишние библиотеки
+
+Сделано:
+- добавить ярлыки для проектов с датой update
+- добавить определение локали пользователя
+- вынести иконки отдельно
+- добавить спрайтирование иконок
