--- a/TODO.txt
+++ b/TODO.txt
@@ -4,6 +4,7 @@
 - добавить order для секции "Обо мне"
 - добавить lazy загрузку картинок
 - убрать лишние библиотеки
+- донастроить линтеры
 
 Сделано:
 - добавить ярлыки для проектов с датой update
