--- a/TODO.txt
+++ b/TODO.txt
@@ -5,6 +5,9 @@
 - добавить lazy загрузку картинок
 - убрать лишние библиотеки
 - донастроить линтеры
+- убрать flow
+- добавить typescript
+- добавить типы
 
 Сделано:
 - добавить ярлыки для проектов с датой update
